# flecs-wgpu-cpp-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json
assets/: shell.html
assets/shaders/: image.wgsl  mipmap.wgsl  quad.wgsl
libs/glfw3webgpu/: cmake_install.cmake  glfw3webgpu.c
libs/webgpu/: CMakeLists.txt
src/: common.hpp  include.hpp  main.cpp
src/examples/images/: example.cpp  example.hpp
src/examples/physics/: example.cpp  example.hpp
src/http/: http.cpp  http.hpp
src/input/: input.cpp  input.hpp
src/physics/: physics.cpp  physics.hpp
src/rendering/: implementations.cpp  rendering.cpp  rendering.hpp
src/rendering/pipelines/: image.cpp  pipelines.hpp  quad.cpp
src/rendering/types/: buffer.cpp  image.cpp  pipeline.cpp  types.hpp  window.cpp
